# CMakeTemplate

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml  runner
cmake/: BuildInfo.cmake  ClangTidy.cmake  Coverage.cmake  CppCheck.cmake  NoInSourceBuilds.cmake  Testing.cmake  buildinfo.h.in
scripts/: cmb.sh  cmbt.sh  di.sh  format.sh
src/car/: CMakeLists.txt  car.cpp
src/car/include/car/: car.h  mock_car.h
test/car/: CMakeLists.txt  car_test.cpp
tst/: CMakeLists.txt
tst/car/: car_test.cpp
